samples/_failures_safe/1761318962_23c7cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e6986f6f.c: In function ‘main’:
./samples/SAFE/__tmp_e6986f6f.c:144:17: error: expected declaration or statement at end of input
  144 |                 result.cols = mat1.cols;
      |                 ^~~~~~
./samples/SAFE/__tmp_e6986f6f.c:144:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e6986f6f.c:144:17: error: expected declaration or statement at end of input
